[package]
name = "rust_nes"
version = "0.1.0"
authors = ["Devedue Wad <devedue@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
minifb = "0.15.3"
image = "0.22.4"
num-traits = ""
chrono = "0.4.19"
bitfield = ""
indexmap = "1.6.1"
rodio = "0.13.0"
alto = "3.0.4"
libc = "0.2.88"

[dev-dependencies]
rand = ""
image = "0.22.4"
rustfix = ""

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef","minwindef","dwmapi", "libloaderapi", "ntdef", "wingdi"] }
widestring = "0.4.2"
pretty-hex ="0.2.0"
lazy_static = "*"
bmp = "0.5.0"
rand = "*"

[lib]
name = "pge"
path = "src/pge/lib.rs"