[package]
authors = ["Devedue Wad <devedue@gmail.com>"]
edition = "2021"
name = "rust_nes"
version = "0.2.0"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.redis]
version = "*"

[dependencies]
alto = "3.0.4"
anyhow = "1.0.41"
bincode = "1.3.3"
bitfield = "0.13.2"
byteorder = "1.4.2"
chrono = "0.4.19"
clap = "2"
hyper = {version = "0.14", features = ["full"]}
iced = {version = "0.3", features = ["tokio", "canvas"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["modal", "card"]}
iced_futures = "0.3.0"
iced_native = "0.4.0"
image = "0.22.4"
indexmap = "1.6.1"
interceptor = "0.4.0"
libc = "0.2.88"
# minifb = "0.19.3"
num-traits = "0.2.14"
rodio = "0.13.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.10.1", features = ["full"]}
webrtc = "0.2.0"
webrtc-data = "0.3.0"

[dev-dependencies]
env_logger = "0.8"
image = "0.22.4"
lazy_static = "1.4"
rand = "0.8.4"
rustfix = "0.6.0"
tokio-test = "0.4"

[target.'cfg(windows)'.dependencies]
bmp = "0.5.0"
lazy_static = "*"
pretty-hex = "0.2.0"
rand = "*"
widestring = "0.4.2"
winapi = {version = "0.3.9", features = ["winuser", "windef", "minwindef", "dwmapi", "libloaderapi", "ntdef", "wingdi"]}