[package]
authors = ["Devedue Wad <devedue@gmail.com>"]
edition = "2021"
name = "rust_nes"
version = "0.2.1"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.redis]
version = "*"

[dependencies]
alto = "3.0.4"
anyhow = "1.0.41"
bitfield = "0.13.2"
byteorder = "1.4.2"
hyper = {version = "0.14", features = ["full"]}
iced = {version = "0.3", features = ["tokio", "canvas"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["modal", "card"]}
iced_futures = "0.3.0"
iced_native = "0.4.0"
interceptor = "0.4.0"
libc = "0.2.88"
# rodio = "0.13.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
tinyfiledialogs = "3.8.3"
tokio = {version = "1.10.1", features = ["full"]}
webrtc = "0.2.0"
webrtc-data = "0.3.0"
lazy_static = "1.4.0"